# ordest

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
ordest/: __init__.py
test/: test_set.py
