[metadata]
name = ordest
license = MIT
license_file = LICENSE
description = insertion order preserving set container
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas@poehlmann.io


[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    mypy

docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints


[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-dynaconf.*]
ignore_missing_imports = True
